--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -121,7 +121,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>의식:</label>
+                <label>의식</label>
                 <select class="party-ritual" style="width: 50px;">
                   <option value="0" selected>0</option>
                   <option value="1">1</option>
@@ -133,7 +133,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>순서:</label>
+                <label>순서</label>
                 <select class="party-order" style="width: 50px;">
                   <option value="1" selected>1</option>
                   <option value="2">2</option>
@@ -142,13 +142,13 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>주 계시:</label>
+                <label>주</label>
                 <select class="main-revelation">
                   <option value="">-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>일월성진:</label>
+                <label>일월성진</label>
                 <select class="sub-revelation" disabled>
                   <option value="">-</option>
                 </select>
@@ -162,7 +162,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>의식:</label>
+                <label>의식</label>
                 <select class="party-ritual" style="width: 50px;">
                   <option value="0" selected>0</option>
                   <option value="1">1</option>
@@ -174,7 +174,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>순서:</label>
+                <label>순서</label>
                 <select class="party-order" style="width: 50px;">
                   <option value="1">1</option>
                   <option value="2" selected>2</option>
@@ -183,13 +183,13 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>주 계시:</label>
+                <label>주</label>
                 <select class="main-revelation">
                   <option value="">-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>일월성진:</label>
+                <label>일월성진</label>
                 <select class="sub-revelation" disabled>
                   <option value="">-</option>
                 </select>
@@ -203,7 +203,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>의식:</label>
+                <label>의식</label>
                 <select class="party-ritual" style="width: 50px;">
                   <option value="0" selected>0</option>
                   <option value="1">1</option>
@@ -215,7 +215,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>순서:</label>
+                <label>순서</label>
                 <select class="party-order" style="width: 50px;">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -224,13 +224,13 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>주 계시:</label>
+                <label>주</label>
                 <select class="main-revelation">
                   <option value="">-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>일월성진:</label>
+                <label>일월성진</label>
                 <select class="sub-revelation" disabled>
                   <option value="">-</option>
                 </select>
@@ -244,7 +244,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>의식:</label>
+                <label>의식</label>
                 <select class="party-ritual" style="width: 50px;">
                   <option value="0" selected>0</option>
                   <option value="1">1</option>
@@ -256,7 +256,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>순서:</label>
+                <label>순서</label>
                 <select class="party-order" style="width: 50px;">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -265,13 +265,13 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>주 계시:</label>
+                <label>주</label>
                 <select class="main-revelation">
                   <option value="">-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>일월성진:</label>
+                <label>일월성진</label>
                 <select class="sub-revelation" disabled>
                   <option value="">-</option>
                 </select>
@@ -286,7 +286,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>의식:</label>
+                <label>의식</label>
                 <select class="party-ritual" style="width: 50px;">
                   <option value="0" selected>0</option>
                   <option value="1">1</option>
@@ -298,19 +298,19 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
                 </select>
               </div>
               <div class="input-group">
-                <label>순서:</label>
+                <label>순서</label>
                 <select class="party-order" style="width: 50px;">
                   <option value="-" selected>-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>주 계시:</label>
+                <label>주</label>
                 <select class="main-revelation">
                   <option value="">-</option>
                 </select>
               </div>
               <div class="input-group">
-                <label>일월성진:</label>
+                <label>일월성진</label>
                 <select class="sub-revelation" disabled>
                   <option value="">-</option>
                 </select>
@@ -424,10 +424,10 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
             '괴도 2': 'P2',
             '괴도 3': 'P3',
             '괴도 4': 'P4',
-            '의식:': 'Awareness:',
-            '순서:': 'Order:',
-            '주 계시:': 'Uni.:',
-            '일월성진:': 'S/M/S/P:',
+            '의식': 'A',
+            '순서': 'Order',
+            '주': 'Uni.',
+            '일월성진': 'S/M/S/P',
             '해명 -': 'SP'
           },
           jp: {
@@ -459,10 +459,10 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
             '괴도 2': '怪盗2',
             '괴도 3': '怪盗3',
             '괴도 4': '怪盗4',
-            '의식:': '意識:',
-            '순서:': '順序:',
-            '주 계시:': '宙:',
-            '일월성진:': '旭月星天:',
+            '의식': '意識',
+            '순서': '順序',
+            '주': '宙',
+            '일월성진': '旭月星天',
             '해명 -': '解明 -'
           }
         };
@@ -1185,6 +1185,176 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
           if (desktopToggleBtn) desktopToggleBtn.classList.add('active');
           if (mobileToggleBtn) mobileToggleBtn.classList.add('active');
         }
+
+        /* ========================
+           계시 커스텀 드롭다운 초기화
+           - 원본 select(.main-revelation, .sub-revelation)는 그대로 유지(클래스명 불변)
+           - UI만 커스텀, 이미지 표시 및 다국어 표시 유지(getRevelationDisplayName 사용)
+        =========================*/
+        (function initRevelationCustomDropdowns(){
+          // 스타일 1회 주입
+          if (!document.querySelector('style[data-rev-dropdown]')) {
+            const st = document.createElement('style');
+            st.setAttribute('data-rev-dropdown','true');
+            st.textContent = `
+              .rev-select-wrap { position: relative; display: block; width: 100%; }
+              .rev-select-wrap select.main-revelation,
+              .rev-select-wrap select.sub-revelation { 
+                position: absolute; left: 0; top: 0; width: 100%; height: 100%;
+                opacity: 0; pointer-events: none; /* 통합성 유지를 위해 DOM 상 유지 */
+              }
+              .rev-display { 
+
+                display: flex; align-items: center; gap: 8px; width: 100%;
+                background: #2e2626; color: #eee; border: 1px solid rgba(255,255,255,0.2);
+                padding: 6px 8px; border-radius: 3px; cursor: pointer; user-select: none;
+              }
+              .rev-display img { width: 20px; height: 20px; object-fit: cover; border-radius: 2px; }
+              .rev-display span { font-size: 14px; flex: 1; min-width: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+              .rev-options { 
+                display: none; position: absolute; left: 0; right: 0; top: calc(100% + 4px); width: 100%;
+                max-height: 240px; overflow-y: auto; background: #3d3030; z-index: 1000;
+                border: 1px solid rgba(255,255,255,0.2); border-radius: 3px; box-shadow: 0 6px 12px rgba(0,0,0,0.3);
+              }
+              .rev-options.active { display: block; }
+              .rev-option { display: flex; align-items: center; gap: 8px; padding: 8px; cursor: pointer; color: #eee; }
+              .rev-option:hover { background: rgba(255,255,255,0.1); }
+              .rev-option img { width: 20px; height: 20px; object-fit: cover; border-radius: 2px; }
+              .rev-option span { font-size: 14px;flex: 1; min-width: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+            `;
+            document.head.appendChild(st);
+          }
+
+          const BASE = (typeof BASE_URL !== 'undefined' && BASE_URL) ? BASE_URL : '';
+
+          function getRevDisplayText(value){
+            try { return (typeof getRevelationDisplayName === 'function') ? getRevelationDisplayName(value) : value; } catch(_) { return value; }
+          }
+
+          function buildOptions(select, listEl){
+            listEl.innerHTML = '';
+            for (const opt of select.options) {
+              const val = opt.value;
+              const text = val ? getRevDisplayText(val) : '-';
+              const item = document.createElement('div');
+              item.className = 'rev-option';
+              if (val) {
+                const img = document.createElement('img');
+                img.src = `${BASE}/assets/img/revelation/${val}.webp`;
+                img.alt = '';
+                img.onerror = function(){ this.style.display = 'none'; };
+                item.appendChild(img);
+              }
+              const span = document.createElement('span');
+              span.textContent = text;
+              item.appendChild(span);
+              item.addEventListener('click', () => {
+                select.value = val;
+                // change 이벤트 전파 (기존 로직 유지)
+                select.dispatchEvent(new Event('change', { bubbles: true }));
+                updateDisplay(select);
+                listEl.classList.remove('active');
+              });
+              listEl.appendChild(item);
+            }
+          }
+
+          function updateDisplay(select){
+            const wrap = select.closest('.rev-select-wrap');
+            if (!wrap) return;
+            const disp = wrap.querySelector('.rev-display');
+            if (!disp) return;
+            const current = select.value;
+            const text = current ? getRevDisplayText(current) : '-';
+            disp.innerHTML = '';
+            if (current) {
+              const img = document.createElement('img');
+              img.src = `${BASE}/assets/img/revelation/${current}.webp`;
+              img.alt = '';
+              img.onerror = function(){ this.style.display = 'none'; };
+              disp.appendChild(img);
+            }
+            const span = document.createElement('span');
+            span.textContent = text;
+            disp.appendChild(span);
+
+            // disabled 상태 반영
+            disp.style.opacity = select.disabled ? '0.6' : '1';
+            disp.style.pointerEvents = select.disabled ? 'none' : 'auto';
+          }
+
+          function enhanceSelect(select){
+            if (!select || select.closest('.rev-select-wrap')) return; // 중복 방지
+            const group = select.closest('.input-group') || select.parentElement;
+            if (!group) return;
+
+            const wrap = document.createElement('div');
+            wrap.className = 'rev-select-wrap';
+
+            const display = document.createElement('div');
+            display.className = 'rev-display';
+
+            const list = document.createElement('div');
+            list.className = 'rev-options';
+
+            // 클릭 토글
+            display.addEventListener('click', (e) => {
+              e.stopPropagation();
+              if (select.disabled) return;
+              const isActive = list.classList.contains('active');
+              document.querySelectorAll('.rev-options.active').forEach(el => el.classList.remove('active'));
+              if (!isActive) list.classList.add('active');
+            });
+            document.addEventListener('click', () => list.classList.remove('active'));
+
+            // 구성 삽입: label 다음에 wrap을 넣고 select 이동
+            const label = group.querySelector('label');
+            if (label && label.nextSibling) group.insertBefore(wrap, label.nextSibling); else group.appendChild(wrap);
+            wrap.appendChild(display);
+            wrap.appendChild(list);
+            wrap.appendChild(select); // 원본 select 유지(클래스/이벤트 그대로)
+
+            // 초기 표시/옵션 구성
+            updateDisplay(select);
+            buildOptions(select, list);
+
+            // select 변경 시 표시 갱신
+            select.addEventListener('change', () => updateDisplay(select));
+
+            // 옵션 변화 감지 (주 변경 후 일월성진 옵션 갱신 대응)
+            const mo = new MutationObserver(() => {
+              buildOptions(select, list);
+              updateDisplay(select);
+            });
+            mo.observe(select, { childList: true });
+
+            // disabled/값 변화도 주기적으로 동기화 (저빈도 폴링)
+            let lastDisabled = select.disabled;
+            let lastValue = select.value;
+            setInterval(() => {
+              let need = false;
+              if (select.disabled !== lastDisabled) {
+                lastDisabled = select.disabled;
+                need = true;
+              }
+              if (select.value !== lastValue) {
+                lastValue = select.value;
+                need = true;
+              }
+              if (need) updateDisplay(select);
+            }, 300);
+          }
+
+          function initAll(){
+            document.querySelectorAll('select.main-revelation, select.sub-revelation').forEach(enhanceSelect);
+          }
+
+          // 초기 시도: DOMContentLoaded 직후 + 약간 지연 후 재시도(동적 옵션 채움 대비)
+          initAll();
+          setTimeout(initAll, 400);
+          setTimeout(initAll, 1000);
+        })();
+
       });
 
       function toggleTurnsLock() {
