--- a/apps/tactic/tactic-upload.html
+++ b/apps/tactic/tactic-upload.html
@@ -146,7 +146,7 @@ description: 페르소나5 더 팬텀 X 택틱을 업로드하세요.
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="modal-close-btn success-close">닫기</button>
+                <button class="modal-close-btn success-close" data-i18n="close">닫기</button>
                 <button id="copyUrlBtnModal" class="modal-close-btn">URL 복사</button>
                 <button id="goListBtnModal" class="modal-close-btn">목록으로</button>
             </div>
