--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -547,7 +547,7 @@ alternate_urls:
                 search_placeholder: "ペルソナ検索...",
                 filter_element: "属性",
                 filter_position: "職業",
-                filter_rarity: "レアリティ",
+                filter_rarity: "タイプ",
                 filter_grade: "グレード", 
                 count_unit: ""
             }
